...
    title: 'Away We Go!',
    color: Colors.pink,
    iconSmall: Image.asset('assets/images/away_we_go.png'),
  ),
  Category(
    id: 'c2',
    title: 'Date Night',
    color: Colors.red,
    iconSmall: Image.asset('assets/images/date_night.png'),
  ),
  Category(
    id: 'c3',
    title: 'Who is most likely',
...
